# Decodelabs_Internship_P3

./: README.md  error_log.txt  pyproject.toml  verify_engine.py
app/: main.py  recommender.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
dataset/: raw_skills.csv
