[tool.poetry]
name = "tech-stack-recommender"
version = "0.1.0"
description = "Content-Based Tech Stack Recommender using TF-IDF and Cosine Similarity"
authors = ["Ammar"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
numpy = "^2.1.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
